--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,25 @@
-.App {
-  text-align: center;
+.input-field {
+  width: 120%;
+  height: 40px;
+  margin: 10px 0 0 0;
+  padding: 5px;
+  font-size: 20px;
+  background-color: white;
+  /* text-align: center; */
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.margin-auto {
+  width: 30%;
+  height: 450px;
+  margin: 100px auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.border {
+  border: 1px solid black;
+  padding:25px
+}
+
+.sign-in{
+  width:30%;
+  margin:auto
 }
