--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,38 @@
 
 .border {
   border: 1px solid black;
-  padding:25px
+  padding: 25px;
 }
 
-.sign-in{
-  width:30%;
-  margin:auto
+.sign-in {
+  width: 30%;
+  margin: auto;
+}
+.d-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.m-10 {
+  margin: 10px;
+}
+.bg-green {
+  width: 60%;
+  color: white;
+  padding: 5;
+  background-color: green;
+}
+.bg-yellow {
+  width: 60%;
+  color: white;
+  padding: 5;
+  background-color: yellowgreen;
+}
+.bg-red {
+  width: 60%;
+  color: white;
+  padding: 5;
+  background-color: red;
+}
+.text-center {
+  text-align: center;
 }
